--- a/web/app/public/sass/global/global.scss
+++ b/web/app/public/sass/global/global.scss
@@ -11,6 +11,7 @@ html {
     background: url('../img/bg.jpg') no-repeat;
     background-size: 100%;
     background-color: #f0f9fd;
+    overflow-x: hidden;
 }
 
 body {
@@ -20,6 +21,8 @@ body {
     font-family: 'Novecentosanswide-Light', 'Helvetica Neue', sans-serif;
     color: #07505a;
     background-color: transparent;
+    position: relative;
+    overflow-x: hidden;
 }
 
 iframe {
@@ -212,6 +215,31 @@ iframe {
         padding: 10px 5px;
         > span {
             font-size: 40px;
+        }
+    }
+  }
+}
+
+@media (max-width: 660px) {
+  #clockdiv {
+    > div {
+        padding: 10px 5px;
+        > span {
+            font-size: 40px;
+        }
+    }
+  }
+}
+
+@media (max-width: 330px) {
+  #clockdiv {
+    > div {
+        padding: 10px 4px;
+        > span {
+            font-size: 36px;
+        }
+        > .smalltext {
+            font-size: 12px;
         }
     }
   }
